; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_usbduxfast.c_usbduxfastsub_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_usbduxfast.c_usbduxfastsub_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbduxfastsub_s = type { i32 }

@USBDUXFASTSUB_FIRMWARE = common dso_local global i32 0, align 4
@VENDOR_DIR_OUT = common dso_local global i32 0, align 4
@USBDUXFASTSUB_CPUCS = common dso_local global i32 0, align 4
@EZTIMEOUT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [50 x i8] c"comedi_: usbduxfast_: control msg failed (start)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usbduxfastsub_s*)* @usbduxfastsub_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usbduxfastsub_start(%struct.usbduxfastsub_s* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usbduxfastsub_s*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [16 x i8], align 16
  store %struct.usbduxfastsub_s* %0, %struct.usbduxfastsub_s** %3, align 8
  %6 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  store i8 0, i8* %6, align 16
  %7 = load %struct.usbduxfastsub_s*, %struct.usbduxfastsub_s** %3, align 8
  %8 = getelementptr inbounds %struct.usbduxfastsub_s, %struct.usbduxfastsub_s* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.usbduxfastsub_s*, %struct.usbduxfastsub_s** %3, align 8
  %11 = getelementptr inbounds %struct.usbduxfastsub_s, %struct.usbduxfastsub_s* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @usb_sndctrlpipe(i32 %12, i32 0)
  %14 = load i32, i32* @USBDUXFASTSUB_FIRMWARE, align 4
  %15 = load i32, i32* @VENDOR_DIR_OUT, align 4
  %16 = load i32, i32* @USBDUXFASTSUB_CPUCS, align 4
  %17 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  %18 = load i32, i32* @EZTIMEOUT, align 4
  %19 = call i32 @usb_control_msg(i32 %9, i32 %13, i32 %14, i32 %15, i32 %16, i32 0, i8* %17, i32 1, i32 %18)
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %1
  %23 = call i32 @printk(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0))
  %24 = load i32, i32* %4, align 4
  store i32 %24, i32* %2, align 4
  br label %26

25:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %26

26:                                               ; preds = %25, %22
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @usb_control_msg(i32, i32, i32, i32, i32, i32, i8*, i32, i32) #1

declare dso_local i32 @usb_sndctrlpipe(i32, i32) #1

declare dso_local i32 @printk(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
